css specified by standalone pages

--- a/dattafest.html
+++ b/dattafest.html
@@ -1,7 +1,12 @@
 ---
 title: "Dattafest: Topology and Combinatorics"
 layout: standalone
+css: "datta-fest"
 ---
+<div class="container">
+
+    <p>&nbsp;</p>  
+
 <div class="row">
     
    </div>
@@ -31,4 +36,4 @@ This is one of a series of three symposia on the occasion of superannuation of t
 </div>
 <div class="col-md-3"><img src="{{site.baseurl}}/images/fac-dattab.jpg" width="100%" /></div>
 </div>
-
+</div>
