updated dattafest photo

--- a/dattafest.html
+++ b/dattafest.html
@@ -17,8 +17,8 @@ css: "datta-fest"
 </div>
 <p>&nbsp;</p>
 <div class="row">
-<div class="col-md-9">
-<p>A symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science on Thursday</a>, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
+<div class="col-md-8">
+<p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science on Thursday</a>, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
     
 <p>For more details, please visit 
 the website <a href="http://math.iisc.ac.in/dattafest.html">http://math.iisc.ac.in/dattafest.html</a>.</p> 
@@ -34,6 +34,6 @@ This is one of a series of three symposia on the occasion of superannuation of t
     <li>Jonathan Spreer (University of Sydney, Australia)</li>
 </ul>
 </div>
-<div class="col-md-3"><img src="{{site.baseurl}}/images/fac-dattab.jpg" width="100%" /></div>
+<div class="col-md-4"><img src="{{site.baseurl}}/BDatta_1489.jpg" width="100%" /></div>
 </div>
 </div>
