Added conference support deadline

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -341,17 +341,16 @@
                             </div>
                         </div>
                     </div>
-<!--                    <div class="container">
+                    <div class="container">
                         <div class="row">
                             <div class="col-sm">
-                                <dt class="text-white-50 mb-6"><li>Youth hostel reservations</li></dt>
+                                <dt class="text-white-50 mb-6"><li>Deadline for <a class="alt" href="#localinfosupport">conference funding requests</a></li></dt>
                             </div>
                             <div class="col-sm">
                                 <dd class="text-white-50 mb-6">May 1, 2021</dd>
                             </div>
                         </div>
                     </div>
--->
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
@@ -585,7 +584,9 @@
    <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-	           <p class="text mb-6">Funding applications for non-US participants will be announced soon.</p>
+	           <p class="text mb-6">We expect to get some money to support the attendance of some participants to FPSAC 2022. 
+	           If you wish to apply for support to FPSAC 2022, fill the following <a href="https://forms.gle/TELf1n36yjqfEJ2ZA">form</a>. 
+	           Preference may be given to graduate students and early career mathematicians. </p>
 	        
 	           <p class="text mb-6">There is a possibility of financial support from the NSF for students and junior researchers 
 	           working in the US to attend FPSAC 2022. Any full-time student in good standing is eligible for consideration, 
