Commented out NSF support

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -314,7 +314,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm">
-                                <dt class="text-white-50 mb-6"><li>Deadline for <a class="alt" href="#localinfosupport">NSF support requests</a></li></dt>
+                                <dt class="text-white-50 mb-6"><li>Deadline for NSF support requests</li></dt>
                             </div>
                             <div class="col-sm">
                                 <dd class="text-white-50 mb-6"><del>April 1, 2022</del></dd>
@@ -586,9 +586,9 @@
             <div class="col-lg-10 text-center">
 	           <p class="text mb-6">We expect to get some money to support the attendance of some participants to FPSAC 2022. 
 	           If you wish to apply for support to FPSAC 2022, fill the following <a href="https://forms.gle/TELf1n36yjqfEJ2ZA">form</a>. 
-	           Preference may be given to graduate students and early career mathematicians. </p>
+	           Preference may be given to graduate students and early career mathematicians. For queries, write to sfandnt at gmail dot com.</p>
 	        
-	           <p class="text mb-6">There is a possibility of financial support from the NSF for students and junior researchers 
+<!--	           <p class="text mb-6">There is a possibility of financial support from the NSF for students and junior researchers 
 	           working in the US to attend FPSAC 2022. Any full-time student in good standing is eligible for consideration, 
 	           as are those in postdoctoral fellowships, tenure-track faculty and other temporary positions. When determining the amount of funding, 
 	           priority will be given to students, and to participants presenting talks or posters. Support is intended to partially 
@@ -604,7 +604,7 @@
 	           	<li>Ask your adviser/mentor to email a supporting reference to the above email address, with subject
 	           	"Reference for <i>&#60;Candidate Name&#62;</i>" .</li>
 	           </ol>
-		        
+-->		        
           	</div>
         </div>
    </div>
