Added warning about foreign cards

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -463,7 +463,8 @@
                      <li>On the third page, select the payment mode. If you have an Indian account, you can pay 
                      using internet banking, credit card, NEFT or UPI.
                      If you do not have an Indian account, you must choose the  <span style="color:black;">"Foreign card"</span>
-                     option. You may pay using either a prepaid card or a credit card, but not
+                     option. (In particular, <span style="color:black;">do not choose the "Credit card"
+                     option</span>.) You may pay using either a prepaid card or a credit card, but not
                      debit cards. You can use Visa, Mastercard or RuPay. American Express will not work.
                      The payment gateway will charge 1.1% for prepaid cards and 3.5% for credit cards plus 18% tax
                      on this transaction charge.
