Added reg success and failure images

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -469,8 +469,15 @@
                      The payment gateway will charge 1.1% for prepaid cards and 3.5% for credit cards plus 18% tax
                      on this transaction charge.
                     	Depending on your bank, you might be charged an additional transaction fee.</li>
-                    	</ol>
-                    </ol>
+
+		     <li>If the transaction succeeds, you will see a screen like <a href="assets/img/reg-success.png">this</a>. 
+                     If the transaction fails for some reason, you will see a screen like <a href="assets/img/reg-problem.png">this</a>.
+                     In case the latter happens, please email fpsac2022.math at iisc dot ac dot in with the Reference number
+                     beginning DUI. We will work on fixing the issue.</li>
+
+		   </ol>
+
+		</ol>
 
 		  <p class="text-white-50 mb-4">To start the process, click on the <a href="form.html" target="_blank">registration form</a>.
 <!--		  <br>
@@ -482,7 +489,7 @@
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
 			<a href="https://www.onlinesbi.com/sbicollect/icollecthome.htm?corpID=4750977" target="_blank">here</a>.
-			In case of any issues, please email fpsac2022.math at iisc dot ac dot in.</p>        
+			</p>        
 
 		    <p class="text-white-50 mb-4" style="text-align: justify;">Once you have registered, you can look at 
 			the <a href="#localinfovisa">options</a> for accommodation.
