Edited support section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -593,8 +593,9 @@
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
 	           <p class="text mb-6">We expect to get some money to support the attendance of some participants to FPSAC 2022. 
-	           If you wish to apply for support to FPSAC 2022, fill the following <a href="https://forms.gle/TELf1n36yjqfEJ2ZA">form</a>. 
-	           Preference may be given to graduate students and early career mathematicians. For queries, write to sfandnt at gmail dot com.</p>
+	           If you wish to apply for support to FPSAC 2022, fill <a href="https://forms.gle/TELf1n36yjqfEJ2ZA">this form</a>. 
+	           Preference may be given to graduate students and early career mathematicians. 
+		   If you have any queries, write to sfandnt at gmail dot com.</p>
 	        
 <!--	           <p class="text mb-6">There is a possibility of financial support from the NSF for students and junior researchers 
 	           working in the US to attend FPSAC 2022. Any full-time student in good standing is eligible for consideration, 
