--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -481,10 +481,13 @@
 
 		  <p class="text-white-50 mb-4">To start the process, click on the <a href="form.html" target="_blank">registration form</a>.
 <!--		  <br>
-		  <span style="color:black;">(Update on March 29: fixed bugs in the form.)</span>-->
+		  <span style="color:black;">(Update on March 29: fixed bugs in the form.)</span>
  		  <br>
 		  <span style="color:black;">(Update on April 7: There is a problem with payment for foreign card holders.
-		  We are working on fixing this. You can still fill the registration form.)</span></p>        
+		  We are working on fixing this. You can still fill the registration form.)</span> -->
+ 		  <br>
+		  <span style="color:black;">(Update on April 18: The problem with payment for foreign card holders has 
+		  now been resolved.)</span></p>        
 						              
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
