Removed Cuenca from poster

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1230,7 +1230,7 @@
 <p style="text-align: center;"> 	Homomorphism complexes, reconfiguration, and homotopy for directed graphs<br> <span  style="color:white;"> 	Anton Dochtermann and Anurag Singh</span></p>
 <p style="text-align: center;"> 	Walks in simplices, cylindric tableaux, and asymmetric exclusion processes<br> <span  style="color:white;"> 	Sergi Elizalde</span></p>
 <p style="text-align: center;"> 	Stable sets in flag spheres<br> <span  style="color:white;"> 	Maria Chudnovsky and Eran Nevo</span></p>
-<p style="text-align: center;"> 	An involution on derangements preserving excedances and right-to-left minima<br> <span  style="color:white;"> 	Per wilhelm alexandersson and Frether Getachew Kebede</span></p>
+<p style="text-align: center;"> 	An involution on derangements preserving excedances and right-to-left minima<br> <span  style="color:white;"> 	Per Wilhelm Alexandersson and Frether Getachew Kebede</span></p>
 <p style="text-align: center;"> 	Peaks are Preserved under Run-Sorting<br> <span  style="color:white;"> 	Per Alexandersson and Olivia Nabawanda</span></p>
 <p style="text-align: center;"> 	Troupes, Cumulants, and Stack-Sorting<br> <span  style="color:white;"> 	Colin Defant</span></p>
 <p style="text-align: center;"> 	Equidistributions around special kinds of descents and excedances via continued fractions<br> <span  style="color:white;"> 	Bin Han, Jianxi Mao and Jiang Zeng</span></p>
@@ -1261,7 +1261,6 @@
 <p style="text-align: center;"> 	A description of the minimal elements of Shi regions in classical Weyl Groups<br> <span  style="color:white;"> 	Balthazar Charles</span></p>
 <p style="text-align: center;"> 	Rooted Clusters for Graph LP Algebras<br> <span  style="color:white;"> 	Esther Banaian, Sunita Chepuri, Elizabeth Kelley and Sylvester W. Zhang</span></p>
 <p style="text-align: center;"> 	Subdivisions of generalized permutahedra<br> <span  style="color:white;"> 	Jorge Olarte, Michael Joswig, Georg Loho and Dante Luber</span></p>
-<p style="text-align: center;"> 	Mackey-type formula for invariant functions on Lie algebras of finite unitary groups and an application<br> <span  style="color:white;"> 	Cesar Cuenca and Grigori Olshanski</span></p>
 <p style="text-align: center;"> 	Horizontal-strip LLT polynomials<br> <span  style="color:white;"> 	Foster Tom</span></p>
 <p style="text-align: center;"> 	Chromatic Quasisymmetric Class Functions of linearized combinatorial Hopf monoids<br> <span  style="color:white;"> 	Jacob White</span></p>
 <p style="text-align: center;"> 	Harmonic Polynomials on Perfect Matchings<br> <span  style="color:white;"> 	Yuval Filmus and Nathan Lindzey</span></p>
@@ -1283,7 +1282,7 @@
 <p style="text-align: center;">  	Growth of unbounded sets in nilpotent groups and random mapping statistics<br> <span  style="color:white;"> 	Beeri Greenfeld and Hagai Lavner</span></p>
 <p style="text-align: center;">  	Derangements and the p-adic incomplete gamma function<br> <span  style="color:white;"> 	Andrew O'Desky and Harry Richman</span></p>
 <p style="text-align: center;">  	Product-Coproduct Prographs and Triangulations of the Sphere<br> <span  style="color:white;"> 	Nicolas Borie and Justine Falque</span></p>
-<p style="text-align: center;">  	Combinatorics of fighting fish, planar maps and Tamari intervals<br> <span  style="color:white;"> 	Corentin HENRIET and Enrica Duchi</span></p>
+<p style="text-align: center;">  	Combinatorics of fighting fish, planar maps and Tamari intervals<br> <span  style="color:white;"> 	Corentin Henriet and Enrica Duchi</span></p>
 <p style="text-align: center;">  	Torsors from toggling independent sets<br> <span  style="color:white;"> 	Colin Defant, Michael Joseph, Matthew Macauley and Alex McDonough</span></p>
 
                         </div>
@@ -1303,7 +1302,7 @@
 <p style="text-align: center;"> 	Generalized quantum Yang-Baxter moves and its application to Schubert calculus<br> <span  style="color:white;"> 	Takafumi Kouno, Cristian Lenart and Satoshi Naito</span></p>
 <p style="text-align: center;"> 	Semidistrim Lattices<br> <span  style="color:white;"> 	Colin Defant and Nathan Williams</span></p>
 <p style="text-align: center;"> 	Integrality in the Matching-Jack conjecture and the Farahat-Higman algebra<br> <span  style="color:white;"> 	Houcine Ben Dali</span></p>
-<p style="text-align: center;"> 	Multigrounded-partitions and character formulas<br> <span  style="color:white;"> 	Isaac KONAN and Jehanne Dousse</span></p>
+<p style="text-align: center;"> 	Multigrounded-partitions and character formulas<br> <span  style="color:white;"> 	Isaac Konan and Jehanne Dousse</span></p>
 <p style="text-align: center;"> 	The m=2 amplituhedron and the hypersimplex<br> <span  style="color:white;"> 	Matteo Parisi, Melissa Sherman-Bennett and Lauren K. Williams</span></p>
 <p style="text-align: center;"> 	The canonical complex of the weak order<br> <span  style="color:white;"> 	Doriann Albertin and Vincent Pilaud</span></p>
 <p style="text-align: center;"> 	Bruhat intervals, subword complexes and brick polyhedra for finite Coxeter groups<br> <span  style="color:white;"> 	Dennis Jahn and Christian Stump</span></p>
