Added reg. deadline for satellites

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -700,7 +700,8 @@
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
-                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8</p>
+                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8<br>
+                        <span style="color:blue;">Registration is open until May 29.</span></p>
                 </div>
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
@@ -713,7 +714,8 @@
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/" target="_blank">Combinatorial Methods in Graph Theory</a></h5>
-                    <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
+                    <p style="text-align: center;">Amrita University, Coimbatore, July 14-16<br>
+                        <span style="color:blue;">Registration is open until June 15.</span></p>
                 </div>
 
                 <div class="col-sm">
