Struckout NSF decision date

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -337,7 +337,7 @@
                                 <dt class="text-white-50 mb-6"><li>NSF financial support decisions</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">April 15, 2022</dd>
+				<dd class="text-white-50 mb-6"><del>April 15, 2022</del></dd>
                             </div>
                         </div>
                     </div>
