--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1228,7 +1228,8 @@
 <p style="text-align: center;"> Refined consecutive pattern enumeration via a generalized cluster method<br> <span  style="color:white;"> 	Yan Zhuang</span></p>
 <p style="text-align: center;"> Mockingbird lattices<br> <span  style="color:white;"> 	Samuele Giraudo</span></p>
 <p style="text-align: center;"> Continuously Increasing Subsequences of Random Multiset Permutations<br> <span  style="color:white;"> 	Alexander Clifton, Bishal Deb, Yifeng Huang, Sam Spiro and Semin Yoo</span></p>
-<p style="text-align: center;"> Row-strict dual immaculate functions and 0-Hecke modules<br> <span  style="color:white;"> 	Sheila Sundaram</span></p>
+<p style="text-align: center;"> Row-strict dual immaculate functions and 0-Hecke modules<br> <span  style="color:white;"> 	Elizabeth Niese, Sheila Sundaram, 
+	Stephanie van Willigenburg, Julianne Vega and Shiyun Wang</span></p>
 <p style="text-align: center;"> 	Homomorphism complexes, reconfiguration, and homotopy for directed graphs<br> <span  style="color:white;"> 	Anton Dochtermann and Anurag Singh</span></p>
 <p style="text-align: center;"> 	Walks in simplices, cylindric tableaux, and asymmetric exclusion processes<br> <span  style="color:white;"> 	Sergi Elizalde</span></p>
 <p style="text-align: center;"> 	Stable sets in flag spheres<br> <span  style="color:white;"> 	Maria Chudnovsky and Eran Nevo</span></p>
