Added ATM workshop

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -725,17 +725,17 @@
                 </div>
 
             </div>
-  </div>
+   </div>
 
-<!--    <div class="container">
+   <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
-                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, Juny 27 - July 8</p>
+                    <h5 style="text-align: center;"><a href="https://www.atmschools.org/school/2022/AIS/acsgt" target="_blank">Introductory workshop on Algebraic Combinatorics and Spectral Graph Theory</a></h5>
+                        <p style="text-align: center;">Mepco Schlenk Engineering College, Sivakasi, May 30 - June 18<br>
+                        <span style="color:blue;">Registration is open until May 15.</span></p>
                 </div>
             </div>
     </div>
--->
 	     
     <!-- Tourism-->
 
