--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1300,7 +1300,7 @@
 <p style="text-align: center;"> Enumeration of walks with small steps avoiding a quadrant<br> <span  style="color:white;"> 	Andrew Elvey Price</span></p>
 <p style="text-align: center;"> Triangulations, Order Polytopes, and Generalized Snake Posets<br> <span  style="color:white;">Matias von Bell, Benjamin Braun, Derek Hanely, Khrystyna Serhiyenko, Julianne Vega, Andrés R. Vindas Meléndez and Martha Yip</span></p>
 <p style="text-align: center;"> 	Log-concave poset inequalities: extended abstract<br> <span  style="color:white;"> 	Swee Hong Chan and Igor Pak</span></p>
-<p style="text-align: center;"> 	On the action of the long cycle on the Kazhdan-Lusztig basis<br> <span  style="color:white;"> 	Martin Gossow and Oded Yacobi</span></p>
+<p style="text-align: center;"> 	On the action of the long cycle on the Kazhdan-Lusztig basis<br> <span  style="color:white;"> 	Fern Gossow and Oded Yacobi</span></p>
 <p style="text-align: center;"> 	A Type B analog of the Whitehouse representation<br> <span  style="color:white;"> 	Sarah Brauner</span></p>
 <p style="text-align: center;"> 	Generalized quantum Yang-Baxter moves and its application to Schubert calculus<br> <span  style="color:white;"> 	Takafumi Kouno, Cristian Lenart and Satoshi Naito</span></p>
 <p style="text-align: center;"> 	Semidistrim Lattices<br> <span  style="color:white;"> 	Colin Defant and Nathan Williams</span></p>
