--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -18,10 +18,10 @@ css: "datta-fest"
 <p>&nbsp;</p>
 <div class="row">
 <div class="col-md-8">
-<p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science on Thursday</a>, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
+<p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Thursday, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
     
 <p>
-This is one of a series of three symposia on the occasion of superannuation of three of our faculty members.</p>
+This is part of three-day symposium on the occasion of superannuation of three of our faculty members.</p>
 <h2>Invited Speakers</h2>
 <ul>
     <li>Bhaskar Bagchi (ISI, Bangalore)</li>
@@ -31,6 +31,6 @@ This is one of a series of three symposia on the occasion of superannuation of t
     <li>Jonathan Spreer (University of Sydney, Australia)</li>
 </ul>
 </div>
-<div class="col-md-4"><img src="{{site.baseurl}}/BDatta_1489.jpg" width="100%" /></div>
+<div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
 </div>
 </div>
