symposium page correction, formatting

--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -5,32 +5,37 @@ css: "datta-fest"
 ---
 <div class="container">
 
-    <p>&nbsp;</p>  
+    <p>&nbsp;</p>
 
-<div class="row">
-    
-   </div>
-<div  class="text-center">
-<h1>Symposium on Topology and Combinatorics</h1>
-<h2>On the occasion of the superannuation of Prof. Basudeb Datta</h2>
-<h2>Thursday, 28 July, 2022</h2>
-</div>
-<p>&nbsp;</p>
-<div class="row">
-<div class="col-md-8">
-<p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Thursday, 28 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Basudeb Datta</a>.</p> 
-    
-<p>
-This is part of three-day symposium on the occasion of superannuation of three of our faculty members.</p>
-<h2>Invited Speakers</h2>
-<ul>
-    <li>Bhaskar Bagchi (ISI, Bangalore)</li>
-    <li>Benjamin Burton (University of Queensland, Australia)</li>
-    <li>Satoshi Murai (Waseda University, Japan)</li>
-    <li>Soumen Sarkar (IIT, Madras)</li>
-    <li>Jonathan Spreer (University of Sydney, Australia)</li>
-</ul>
-</div>
-<div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
-</div>
+    <div class="row">
+
+    </div>
+    <div class="text-center">
+        <h1>Symposium on Topology and Combinatorics</h1>
+        <h2>On the occasion of the superannuation of Prof. Basudeb Datta</h2>
+        <h2>Thursday, 28 July, 2022</h2>
+    </div>
+    <p>&nbsp;</p>
+    <div class="row">
+        <div class="col-md-8">
+            <p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a
+                    href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
+                    href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Thursday, 28 July,
+                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
+                    target="_blank">Prof. Basudeb Datta</a>.</p>
+
+            <p>
+                This is part of three-day symposium on the occasion of superannuation of three of our faculty members.
+            </p>
+            <h2>Invited Speakers</h2>
+            <ul>
+                <li>Bhaskar Bagchi (ISI, Bangalore)</li>
+                <li>Benjamin Burton (University of Queensland, Australia)</li>
+                <li>Satoshi Murai (Waseda University, Japan)</li>
+                <li>Soumen Sarkar (IIT, Madras)</li>
+                <li>Jonathan Spreer (University of Sydney, Australia)</li>
+            </ul>
+        </div>
+        <div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
+    </div>
 </div>
