--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -5,33 +5,38 @@ css: "mkg-fest"
 ---
 <div class="container">
 
-    <p>&nbsp;</p>  
+    <p>&nbsp;</p>
 
-<div class="row">
-    
-   </div>
-<div  class="text-center">
-<h1>Symposium on Stochastic Control and Applications</h1>
-<h2>On the occasion of the superannuation of Prof. Mrinal Kanti Ghosh</h2>
-<h2>Monday, 25 July, 2022</h2>
-</div>
-<p>&nbsp;</p>
-<div class="row">
-<div class="col-md-8">
-<p>A hybrid symposium on <em>Stochastic Control and Applications</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Monday, 25 July, 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. Mrinal Kanti Ghosh</a>.</p> 
-    
-<p>
-This is part of three-day symposium on the occasion of superannuation of three of our faculty members.</p>
-<h2>Invited Speakers</h2>
-<ul>
-    <li>Vivek Borkar (IIT-B)</li> 
-    <li>Suresh Kumar (IIT-B)</li>
-    <li>B. Rajeev (ISI Bangalore) </li>
-    <li>  Anup Biswas (IISER Pune)</li>
-    <li>Imran Biswas (TIFR-CAM)</li>
-    <li>Gopal Basak (ISI, Kolkatta) </li>
-</ul>
-</div>
-<div class="col-md-4"><img src="fac-mkg.jpg" width="100%" /></div>
-</div>
+    <div class="row">
+
+    </div>
+    <div class="text-center">
+        <h1>Symposium on Stochastic Control and Applications</h1>
+        <h2>On the occasion of the superannuation of Prof. Mrinal Kanti Ghosh</h2>
+        <h2>Monday, 25 July, 2022</h2>
+    </div>
+    <p>&nbsp;</p>
+    <div class="row">
+        <div class="col-md-8">
+            <p>A hybrid symposium on <em>Stochastic Control and Applications</em> will be organized by the <a
+                    href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
+                    href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Monday, 25 July,
+                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
+                    target="_blank">Prof. Mrinal Kanti Ghosh</a>.</p>
+
+            <p>
+                This is part of three-day symposium on the occasion of superannuation of three of our faculty members.
+            </p>
+            <h2>Invited Speakers</h2>
+            <ul>
+                <li>Vivek Borkar (IIT-B)</li>
+                <li>Suresh Kumar (IIT-B)</li>
+                <li>B. Rajeev (ISI Bangalore) </li>
+                <li> Anup Biswas (IISER Pune)</li>
+                <li>Imran Biswas (TIFR-CAM)</li>
+                <li>Gopal Basak (ISI, Kolkatta) </li>
+            </ul>
+        </div>
+        <div class="col-md-4"><img src="fac-mkg.jpg" width="100%" /></div>
+    </div>
 </div>
