--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -5,31 +5,36 @@ css: "thangavelu-fest"
 ---
 <div class="container">
 
-    <p>&nbsp;</p>  
+    <p>&nbsp;</p>
 
-<div class="row">
-    
-   </div>
-<div  class="text-center">
-<h1>Symposium on Topology and Combinatorics</h1>
-<h2>On the occasion of the superannuation of Prof. S. Thangavelu</h2>
-<h2>Tuesday, 26 July 2022</h2>
-</div>
-<p>&nbsp;</p>
-<div class="row">
-<div class="col-md-8">
-<p>A hybrid symposium on <em>Topology and Combinatorics</em> will be organized by the <a href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Tuesday, 26 July 2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/" target="_blank">Prof. S. Thangavelu</a>.</p> 
-    
-<p>
-This is part of three-day symposium on the occasion of superannuation of three of our faculty members.</p>
-<h2>Invited Speakers</h2>
-<ul>
-    <li>Bernhard Krotz (University of Paderborn, Germany)</li>
-    <li>  Jotsaroop Kaur (IISER Mohali) </li>
-    <li> Rahul Garg (IISER Bhopal)</li>
-    <li> Pritam Ganguly (IISc)</li>
-</ul>
-</div>
-<div class="col-md-4"><img src="fac-veluma.jpg" width="100%" /></div>
-</div>
+    <div class="row">
+
+    </div>
+    <div class="text-center">
+        <h1>Symposium on Harmonic Analysis</h1>
+        <h2>On the occasion of the superannuation of Prof. S. Thangavelu</h2>
+        <h2>Tuesday, 26 July 2022</h2>
+    </div>
+    <p>&nbsp;</p>
+    <div class="row">
+        <div class="col-md-8">
+            <p>A hybrid symposium on <em>Harmonic Analysis</em> will be organized by the <a
+                    href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
+                    href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Tuesday, 26 July
+                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
+                    target="_blank">Prof. S. Thangavelu</a>.</p>
+
+            <p>
+                This is part of three-day symposium on the occasion of superannuation of three of our faculty members.
+            </p>
+            <h2>Invited Speakers</h2>
+            <ul>
+                <li>Bernhard Krotz (University of Paderborn, Germany)</li>
+                <li> Jotsaroop Kaur (IISER Mohali) </li>
+                <li> Rahul Garg (IISER Bhopal)</li>
+                <li> Pritam Ganguly (IISc)</li>
+            </ul>
+        </div>
+        <div class="col-md-4"><img src="fac-veluma.jpg" width="100%" /></div>
+    </div>
 </div>
