mrinal photo updated

--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -17,7 +17,7 @@ css: "mkg-fest"
     </div>
     <p>&nbsp;</p>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-9">
             <p>A hybrid symposium on <em>Stochastic Control and Applications</em> will be organized by the <a
                     href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
                     href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Monday, 25 July,
@@ -37,6 +37,6 @@ css: "mkg-fest"
                 <li>Gopal Basak (ISI, Kolkatta) </li>
             </ul>
         </div>
-        <div class="col-md-4"><img src="fac-mkg.jpg" width="100%" /></div>
+        <div class="col-md-3"><img src="Mrinal.jpg" width="100%" /></div>
     </div>
 </div>
