thangavelu spiffy photo

--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -35,6 +35,6 @@ css: "thangavelu-fest"
                 <li> Pritam Ganguly (IISc)</li>
             </ul>
         </div>
-        <div class="col-md-4"><img src="fac-veluma.jpg" width="100%" /></div>
+        <div class="col-md-4"><img src="thangavelu.jpg" width="100%" /></div>
     </div>
 </div>
