Added sagedays deadline

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -716,7 +716,8 @@
                 </div>
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
-                    <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27</p>
+                    <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27<br>
+                        <span style="color:blue;">Registration is open until May 18.</span></p>
                 </div>
             </div>
     </div>
