--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -21,7 +21,7 @@ css: "thangavelu-fest"
             <p>A hybrid symposium on <em>Harmonic Analysis</em> will be organized by the <a
                     href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
                     href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Tuesday, 26 July
-                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
+                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~veluma/"
                     target="_blank">Prof. S. Thangavelu</a>.</p>
 
             <p>
