Chase cards not working

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -486,8 +486,11 @@
 		  <span style="color:black;">(Update on April 7: There is a problem with payment for foreign card holders.
 		  We are working on fixing this. You can still fill the registration form.)</span> -->
  		  <br>
-		  <span style="color:black;">(Update on April 18: The problem with payment for foreign card holders has 
-		  now been resolved.)</span></p>        
+		  <span style="color:black;">(Update on April 18: The generic problem with payment for foreign card holders has 
+		  now been resolved.)</span>
+		  <br>
+		  <span style="color:black;">(Update on May 5: It seems that there are compatibility issues with Chase Bank (hat tip Sheila!)
+	 	  for foreign transactions. Please use a card from a different bank.)</span></p>        
 						              
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
