Updated three day symposium website

--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -35,6 +35,10 @@ css: "datta-fest"
                 <li>Soumen Sarkar (IIT, Madras)</li>
                 <li>Jonathan Spreer (University of Sydney, Australia)</li>
             </ul>
+	    <h2>Schedule</h2>
+            <ul>
+                <li>To be announced later</li>
+            </ul>
         </div>
         <div class="col-md-4"><img src="BDatta_1489.jpg" width="100%" /></div>
     </div>
