--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -34,6 +34,11 @@ css: "thangavelu-fest"
                 <li> Rahul Garg (IISER Bhopal)</li>
                 <li> Pritam Ganguly (IISc)</li>
             </ul>
+	    <h2>Schedule</h2>
+            <ul>
+                <li>To be announced later</li>
+            </ul>
+
         </div>
         <div class="col-md-4"><img src="thangavelu.jpg" width="100%" /></div>
     </div>
