--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -21,7 +21,7 @@ css: "mkg-fest"
             <p>A hybrid symposium on <em>Stochastic Control and Applications</em> will be organized by the <a
                     href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a
                     href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a> on Monday, 25 July,
-                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~dattab/"
+                2022 on the occasion of the superannuation of <a href="http://math.iisc.ac.in/~mkg/"
                     target="_blank">Prof. Mrinal Kanti Ghosh</a>.</p>
 
             <p>
@@ -35,6 +35,10 @@ css: "mkg-fest"
                 <li> Anup Biswas (IISER Pune)</li>
                 <li>Imran Biswas (TIFR-CAM)</li>
                 <li>Gopal Basak (ISI, Kolkatta) </li>
+            </ul>
+	    <h2>Schedule</h2>
+            <ul>
+                <li>To be announced later</li>
             </ul>
         </div>
         <div class="col-md-3"><img src="Mrinal.jpg" width="100%" /></div>
