--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -25,7 +25,7 @@ css: "mkg-fest"
                     target="_blank">Prof. Mrinal Kanti Ghosh</a>.</p>
 
             <p>
-                This is part of three-day symposium on the occasion of superannuation of three of our faculty members.
+                This is part of a three-day symposium on the occasion of superannuation of three of our faculty members.
             </p>
             <h2>Invited Speakers</h2>
             <ul>
