--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -25,7 +25,7 @@ css: "thangavelu-fest"
                     target="_blank">Prof. S. Thangavelu</a>.</p>
 
             <p>
-                This is part of three-day symposium on the occasion of superannuation of three of our faculty members.
+                This is part of a three-day symposium on the occasion of superannuation of three of our faculty members.
             </p>
             <h2>Invited Speakers</h2>
             <ul>
