Added 2FA update

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -488,9 +488,12 @@
  		  <br>
 		  <span style="color:black;">(Update on April 18: The generic problem with payment for foreign card holders has 
 		  now been resolved.)</span>
-		  <br>
+<!--		  <br>
 		  <span style="color:black;">(Update on May 5: It seems that there are compatibility issues with Chase Bank (hat tip Sheila!)
-	 	  for foreign transactions. Please use a card from a different bank.)</span></p>        
+	 	  for foreign transactions. Please use a card from a different bank.)</span> -->
+		  <br>
+		  <span style="color:black;">(Update on May 7: For foreign cards, two-factor authentication seems to be necessary for
+	 	  the transactions to go through.)</span></p>        
 						              
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
