--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -757,7 +757,7 @@
    <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h5 style="text-align: center;"><a href="https://www.atmschools.org/school/2022/AIS/acsgt" target="_blank">Introductory workshop on Algebraic Combinatorics and Spectral Graph Theory</a></h5>
+                    <h5 style="text-align: center;"><a href="https://www.atmschools.org/school/2022/AIS/acsgt" target="_blank">Introductory school on Algebraic Combinatorics and Spectral Graph Theory</a></h5>
                         <p style="text-align: center;">Mepco Schlenk Engineering College, Sivakasi, May 30 - June 18<br>
                         <span style="color:blue;">Registration is open until May 15.</span></p>
                 </div>
