--- a/adamkoranyibirthday/index.html
+++ b/adamkoranyibirthday/index.html
@@ -1,10 +1,10 @@
 ---
-title: "Dattafest: Topology and Combinatorics"
+title: "A conference in honour of Professor Adam Korányi"
 layout: standalone
 css: "ak-fest"
 ---
 <div class="container">
-
+	
     <p>&nbsp;</p>
 
     <div class="row">
@@ -18,12 +18,13 @@ css: "ak-fest"
     <p>&nbsp;</p>
     <div class="row">
         <div class="col-md-8">
-		<p>We are very happy to announce a meeting on July 13, 2022 to be held at the Department of Mathematics, Indian Institute of Science, Bangalore, in honour of Prof. Adam Korányi to celebrate his ninetieth birthday. </p>
+		<p>We are very happy to announce a meeting on July 13, 2022 to be held at the <a
+                    href="http://math.iisc.ac.in" target="_blank">Department of Mathematics</a>, <a href="http://www.iisc.ac.in" target="_blank">Indian Institute of Science</a>, Bangalore, in honour of Professor Adam Korányi to celebrate his ninetieth birthday. </p>
 
             <p>
                  The meeting will be held in virtual mode and a zoom link will be provided closer to the date of the meeting.
             </p>
-	    <p> Three talks are scheduled during the first half and the second half would be for colleagues and friends to speak of their friendship and mathematical collaboration with Prof. Adam Korányi. The times indicated in the schedule of talks are local times in India. </p>
+	    <p> Three talks are scheduled during the first half and the second half would be for colleagues and friends to speak of their friendship and mathematical collaboration with Professor Adam Korányi. The times indicated in the schedule of talks are local times in India. </p>
             <h2>Schedule</h2>
             <ul>
                 <li>7.30 PM: Jacques Faraut</li>
@@ -40,8 +41,6 @@ css: "ak-fest"
 		<li>S. Thangavelu </li>
             </ul>
         </div>
-        <div class="col-md-4"><img src="AK.jpg" width="100%" /></div>
-	<div id="watermark"> </div>
-   
-    </div>
+        <div class="col-md-4"><img src="ak1.jpg" width="100%" /></div>
+ </div>
 </div>
