Commented ariel logo

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1374,11 +1374,11 @@
 	    
 	<div class="container-fluid p-0">
    		<div class="row no-gutters">
-        		<div class="col-lg-4 col-sm-6">
+<!--        		<div class="col-lg-4 col-sm-6">
 	            		<a href="https://www.iisc.ac.in/" target="_blank">
 		            	<img class="img-fluid" src="assets/img/7.jpg" alt="IISc logo">
                   		</a> 
-                	</div>
+                	</div> -->
                		<div class="col-lg-4 col-sm-6">
 	            		<a href="https://www.iisc.ac.in/" target="_blank">
                   		<img class="img-fluid" src="assets/img/9.jpg" alt="IISc logo">
