Replaced e-tourist by e-conference visa

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -678,7 +678,7 @@
  		<p class="text mb-4"><a class="nav-item" href="https://indianvisaonline.gov.in/visa/" target="_blank">
 		<strong>See here for more details.</strong></a></p>
 		    
- 		<p class="text mb-6"> Nationals of certain countries may be eligible for e-tourist visa.</p>
+ 		<p class="text mb-6"> Nationals of certain countries may be eligible for e-conference visas.</p>
 		    
                 <p class="text mb-4"><a class="nav-item" href="https://indianvisaonline.gov.in/visa/tvoa.html" target="_blank">
 		<strong>Check this website for more details</strong></a></p>
