Late reg fee implemented

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -493,7 +493,9 @@
 	 	  for foreign transactions. Please use a card from a different bank.)</span> -->
 		  <br>
 		  <span style="color:black;">(Update on May 7: For foreign cards, two-factor authentication seems to be necessary for
-	 	  the transactions to go through.)</span></p>        
+	 	  the transactions to go through.)</span>
+		  <br>
+		  <span style="color:black;">(Update on May 16: The late registration fee charges have been implemented.)</span></p>        
 						              
 		    <p class="text-white-50 mb-4" style="text-align: justify;">If you have already filled the registration form and 
 			would like to go directly to the payment portal, click 
