Added Greenpath details

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -650,7 +650,12 @@
                 <p style="text-align: left;">Reservations will be made strictly on a first-come-first-served basis.
                 Once you have paid the <a href="#contact">registration fee</a>, contact Ms. Abhinandana C. (abhinandanac at iisc dot ac dot in)
                 to make a reservation.</p>
-                
+
+              	<p style="text-align: left;">Accommodation is also available in the <a href="assets/img/GreenPathBrochure.PDF" target="_blank">
+		Green Path Eco Hotel</a> at <a href="https://g.page/hotel-mint-green-path?share" target="_blank">walking distance</a> from the 
+		IISc campus. The special rate for the conference is INR 2000 for a single room and INR 2500 for a double room per night, plus 
+		tax. Contact rashmi at thegreenpath dot in for booking and mention that you are a participant at FPSAC to get the discounted rate.</p>
+		    
                 <p style="text-align: left; color: #ff9900;"><strong>Hotel Booking Spam Alert!</strong> 
                 Please do not respond to spam emails or messages about hotels in Bangalore. 
                 Details about hotel accommodation will soon be available on this page.
