Updated Adam Koranyi website

--- a/adamkoranyibirthday/index.html
+++ b/adamkoranyibirthday/index.html
@@ -27,11 +27,11 @@ css: "ak-fest"
 	    <p> Three talks are scheduled during the first half and the second half would be for colleagues and friends to speak of their friendship and mathematical collaboration with Professor Adam Korányi. The times indicated in the schedule of talks are local times in India. </p>
             <h2>Schedule</h2>
             <ul>
-                <li>7.30 PM: Jacques Faraut</li>
-                <li>8:25 PM: Harald Upmeier</li>
-                <li>9:20 PM: E. K. Naryanan</li>
-                <li>10:15 PM – 11:00 PM Break</li>
-                <li>11:00 – 1200: Reminiscences</li>
+                <li>Lecture I: Jacques Faraut 19:00 - 19:50</li>
+                <li>Lecture II: Harald Upmeier 19:55 - 20:45</li>
+                <li>Lecture III: E. K. Naryanan 20:50 - 21:40</li>
+                <li>Break: 21:45 - 22:30</li>
+                <li>Conversations: 22:30 - 00:00</li>
             </ul>
 	    <h2>Organizing Committee</h2>
             <ul>
