--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -730,7 +730,7 @@
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
                     <p style="text-align: center;">The Institute of Mathematical Sciences, Chennai, July 25–27<br>
-                        <span style="color:blue;">Registration is open until May 18.</span></p>
+			<span style="color:blue;"><del>Registration is open until May 18.</del></span></p>
                 </div>
             </div>
     </div>
@@ -766,7 +766,7 @@
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://www.atmschools.org/school/2022/AIS/acsgt" target="_blank">Introductory school on Algebraic Combinatorics and Spectral Graph Theory</a></h5>
                         <p style="text-align: center;">Mepco Schlenk Engineering College, Sivakasi, May 30 - June 18<br>
-                        <span style="color:blue;">Registration is open until May 15.</span></p>
+			<span style="color:blue;"><del>Registration is open until May 15.</del></span></p>
                 </div>
             </div>
     </div>
