ICTS deadline over

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -761,8 +761,8 @@
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://www.icts.res.in/program/cagtr2022" target="_blank">Combinatorial Algebraic Geometry: Tropical and Real</a></h5>
-                        <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8<br>
-                        <span style="color:blue;">Registration is open until May 29.</span></p>
+                    <p style="text-align: center;">International Centre for Theoretical Sciences, Bangalore, June 27 - July 8<br>
+			<span style="color:blue;"><del>Registration is open until May 29.</del></span></p>
                 </div>
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://wiki.sagemath.org/days114" target="_blank">Sage Days 114</a></h5>
@@ -792,7 +792,7 @@
             <div class="row">
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="http://www.math.uwaterloo.ca/~opecheni/alcove.htm" target="_blank">AlCoVE (Algebraic Combinatorics Virtual Expedition) 2022</a></h5>
-                        <p style="text-align: center;">Virtual, June 6-7<!--<br>
+                    <p style="text-align: center;">Virtual, June 6-7<!--<br>
                         <span style="color:blue;">Deadline for poster submissions is May ?.</span>--></p>
                 </div>
             </div>
