--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -677,8 +677,8 @@
 		<p style="text-align: left;">The Organizing Committee of FPSAC 2022 is committed to providing a <strong>rewarding and welcoming experience for all</strong>. 
 		We are committed to ensuring that FPSAC 2022 is professional and free of harassment and discrimination in all of its events. 
 		Furthermore, we are dedicated to creating a supportive environment that benefits from the diversity of experiences of all its participants. 
-		We aim to offer equal opportunity and treatment to every participant regardless of their mathematical experience, gender identity, nationality, 
-		race or ethnicity, religion, age, marital status, sexual orientation, disability, or any other factor.</p>
+		We aim to offer equal opportunity and treatment to every participant regardless of their mathematical experience, sex, gender identity, nationality, 
+		race or ethnicity, belief, age, marital status, sexual orientation, disability, or any other factor.</p>
 					
 		<p style="text-align: left;">We will not tolerate any form of discrimination or harassment. If you experience harassment or discriminatory behavior at a conference event, 
 		we encourage you to reach out to any member of the organizing committee so we may take appropriate actions to address the situation.</p>
@@ -1365,7 +1365,7 @@
                 </div>
                 
                 <div class="col-sm">
-                    <h2 style="text-align: center;">Invited talks</h2>
+                    <h2 style="text-align: center;">Contributed talks</h2>
                     <hr class="divider my-4" />
                 <div class="col-sm">
 <p style="text-align: center;"> Enumeration of walks with small steps avoiding a quadrant<br> <span  style="color:white;"> 	Andrew Elvey Price</span></p>
