--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -739,7 +739,11 @@
             <div class="col-lg-8 text-center">
                 <h4 style="text-align: center;">Social Events</h4>
                 <hr class="divider my-4" />
-                <p style="text-align: center;">Coming soon</p> 
+                <p style="text-align: left;">The banquet for the conference will be held at 
+			<a href="https://www.royalorchidhotels.com/royal-orchid-resort-convention-centre-bangalore/overview">
+                Royal Orchid Resort & Convention Centre</a>, about ten kilometers away from the venue, on Thursday July 21. 
+		Transportation will be arranged for participants. 
+                More details will be shared closer to the date of the conference.</p> 
             </div>
         </div>
     </div>
